[gd_scene load_steps=9 format=3 uid="uid://cox46oc887edj"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://t3n64ghn0usc" path="res://scenes/GreenShip.tscn" id="1_t5jmr"]
[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://dcwu8ypraifim" path="res://assets/icon.png" id="5_tmk26"]
[ext_resource type="Script" path="res://scenes/Dropzone.gd" id="6_rsrbg"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(338.375, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08e86"]
size = Vector2(1184, 114)

[node name="LevelTwo" type="Node"]

[node name="GreenShip" parent="." instance=ExtResource("1_t5jmr")]
position = Vector2(600, 307)

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2(573, 547)
script = ExtResource("3")

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource("1")]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource("1")]
position = Vector2(74, -1)

[node name="Node" type="Node" parent="."]

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(585, 38)
shape = SubResource("1")

[node name="background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_tmk26")
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("6_rsrbg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(581, 711)
shape = SubResource("RectangleShape2D_08e86")

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
